Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MostSpecific23.out
MostSpecific23.java:17:9: compiler.err.ref.ambiguous: m1, kindname.method, <T>m1(MostSpecific23.F1<T>), MostSpecific23, kindname.method, m1(MostSpecific23.F2), MostSpecific23
1 error
